# upsound-test

./: README.md  pyproject.toml  test.py
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
bot/: __init__.py  cache.py  config.py  handlers.py  main.py  yandex_music_service.py
tests/: test_cache.py  test_yandex_music_service.py
yandex_music_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
